--- a/frontend/package.json
+++ b/frontend/package.json
@@ -18,6 +18,7 @@
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
     "react-hook-form": "^7.62.0",
+    "react-is": "^19.1.1",
     "react-router-dom": "^7.9.1",
     "recharts": "^3.2.0",
     "tailwind-merge": "^3.3.1"
