--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,12 +10,8 @@
     "preview": "vite preview"
   },
   "dependencies": {
-<<<<<<< HEAD
     "@tsparticles/react": "^3.0.0",
-    "axios": "^1.12.1",
-=======
     "axios": "^1.12.2",
->>>>>>> 8f0d94c87c240762ec40e12e6c0b393f817089eb
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "framer-motion": "^12.23.12",
@@ -27,11 +23,9 @@
     "react-router-dom": "^7.9.1",
     "recharts": "^3.2.0",
     "tailwind-merge": "^3.3.1",
-<<<<<<< HEAD
-    "tsparticles": "^3.9.1"
-=======
+    "tailwindcss-animate": "^1.0.7",
+    "tsparticles": "^3.9.1",
     "zustand": "^5.0.8"
->>>>>>> 8f0d94c87c240762ec40e12e6c0b393f817089eb
   },
   "devDependencies": {
     "@eslint/js": "^9.33.0",
@@ -45,7 +39,6 @@
     "globals": "^16.3.0",
     "postcss": "^8.5.6",
     "tailwindcss": "^3.4.0",
-    "tailwindcss-animate": "^1.0.7",
     "vite": "^7.1.5"
   }
 }
