--- a/backend/package.json
+++ b/backend/package.json
@@ -6,7 +6,8 @@
   "type": "module",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "nodemon server.js"
+    "dev": "nodemon server.js",
+    "start": "node server.js"
   },
   "keywords": [],
   "author": "",
@@ -26,5 +27,8 @@
   },
   "devDependencies": {
     "nodemon": "^3.1.10"
+  },
+  "directories": {
+    "lib": "lib"
   }
 }
